fix: fix overflow scroll on mobiles

--- a/rss-css-selectors/src/components/lessonSelector/style.css
+++ b/rss-css-selectors/src/components/lessonSelector/style.css
@@ -13,6 +13,7 @@
   background-image: url('../../assets/black-orchid.png');
   list-style: none;
   transition: right 0.2s ease-in-out;
+  overflow: scroll;
 }
 
 .lesson-selector__title {
